--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "postmybuild": "^1.0.1"
   }
 }
